my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ETREC/ETREC.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ETREC.dml:12:1: error ETREC: recursive type definition of struct list_item
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ETREC.dml:18:1: error ETREC: recursive type definition of struct foo
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ETREC.dml:23:1: via here
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ETREC.dml:37:1: error ETREC: recursive type definition of struct X
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ETREC.dml:41:1: via here
